# learn-you-a-haskell-notebook

./: .gitignore  Dockerfile  LICENSE  README.md  _config.yml  docker-compose.yml  flake.nix  index.md  kernels.nix  개발환경설정.md
.devcontainer/: Dockerfile  devcontainer.json
anchordoc/: LICENSE  README.md  anchordoc.cabal  notebooks.anchordoc.sh  stack.yaml
anchordoc/src/: Main.hs
codes/: Code01.hs  Code02.hs  Code03.hs  Code04.hs  hie.yaml
kernels/: haskell.nix
notebook/: .gitignore  00-preface.ipynb  01-introduction.ipynb  02-starting-out.ipynb  03-types-and-typeclasses.ipynb  04-syntax-in-functions.ipynb  05-recursion.ipynb  06-higher-order-functions.ipynb  07-modules.ipynb  08-making-our-own-types-and-typeclasses.ipynb  09-input-and-output.ipynb  10-functionally-solving-problems.ipynb  11-functors-applicative-functors-and-monoids.ipynb  12-a-fistful-of-monads.ipynb  13-for-a-few-monads-more.ipynb  14-zippers.ipynb  Untitled.ipynb
notebook_extra/: WidgetChart.ipynb  WidgetDiagram.ipynb  WidgetRevival.ipynb
notebooks/: 00-preface.ipynb  01-introduction.ipynb  02-starting-out-translation.ipynb  02-starting-out.ipynb  02-starting-out_kr.ipynb  02-starting-out_tr.ipynb  03-types-and-typeclasses.ipynb  04-syntax-in-functions.ipynb  05-recursion.ipynb  10-functionally-solving-problems.ipynb  13-for-a-few-monads-more.ipynb  14-zippers.ipynb
notebooks_translation/: 01-introduction.ipynb  02-starting-out.ipynb  03-types-and-typeclasses.ipynb  04-syntax-in-functions.ipynb  07-modules.ipynb  08-making-our-own-types-and-typeclasses.ipynb  09-input-and-output.ipynb  (+3 more)
