name:                anchordoc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jamesdbrock/anchordoc#readme
license:             BSD3
license-file:        LICENSE
author:              James D. Brock
maintainer:          jamesbrock@gmail.com
copyright:           James D. Brock
category:            personal
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable anchordoc
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , split
                     , wreq
